[gd_scene load_steps=11 format=3 uid="uid://dq3sqbqaxx6kc"]

[ext_resource type="Script" path="res://Instanceables/Player/Player.gd" id="1_c8ruj"]
[ext_resource type="PackedScene" uid="uid://q5w6ovnnrknu" path="res://Assets/Models/Mobs/playerdoll.tscn" id="2_3l5dt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gp11y"]

[sub_resource type="Animation" id="Animation_uaono"]
resource_name = "HeadBob"
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:v_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.34, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.02, 0.0]
}

[sub_resource type="Animation" id="Animation_vtoxa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:v_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ocnqp"]
resource_name = "SHeadBob"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:v_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.02, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtkms"]
_data = {
"HeadBob": SubResource("Animation_uaono"),
"RESET": SubResource("Animation_vtoxa"),
"SHeadBob": SubResource("Animation_ocnqp")
}

[sub_resource type="GDScript" id="GDScript_6ur5u"]
script/source = "extends RayCast3D


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	var hit_point = get_collision_point()
	if hit_point:
		get_children()[0].global_position = hit_point
"

[sub_resource type="GDScript" id="GDScript_0vcbw"]
script/source = "extends RayCast3D


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	var hit_point = get_collision_point()
	if hit_point:
		get_children()[0].global_position = hit_point
"

[sub_resource type="SphereShape3D" id="SphereShape3D_0jb3p"]
radius = 3.0

[node name="Player" type="CharacterBody3D"]
editor_description = "Player"
collision_layer = 2
collision_mask = 5
script = ExtResource("1_c8ruj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_gp11y")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.68243, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.197, 0)
current = true

[node name="lookRay" type="RayCast3D" parent="CameraController/Camera3D"]
target_position = Vector3(0, 0, -100)
collision_mask = 177

[node name="DistanceRef" type="Node3D" parent="CameraController/Camera3D/lookRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CameraController/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_rtkms")
}

[node name="GunController" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.185, 0.048058, -0.306158)

[node name="Weapon1" type="Node3D" parent="CameraController/GunController"]

[node name="Weapon2" type="Node3D" parent="CameraController/GunController"]

[node name="Weapon3" type="Node3D" parent="CameraController/GunController"]

[node name="AimDownSightsRef" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.143444, -0.306)

[node name="ModelController" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="doll" parent="ModelController" instance=ExtResource("2_3l5dt")]

[node name="StepTargetController" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="RightSprintRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, 0, 2.74655e-09, 1.86265e-08, -1.49012e-08, 1, 0, -1, -4.8434e-08, -0.155, 0.5, 1.2)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_6ur5u")

[node name="RightStepTarget" type="Node3D" parent="StepTargetController/RightSprintRayCast"]
transform = Transform3D(0.0449435, -0.254887, -0.965926, 0.167731, -0.951251, 0.258819, -0.984808, -0.173648, -4.2222e-08, 0, 2.98023e-08, -0.5)

[node name="RightRaiseTarget" type="Node3D" parent="StepTargetController/RightSprintRayCast"]
transform = Transform3D(0.0449435, -0.254887, -0.965926, 0.167731, -0.951251, 0.258819, -0.984808, -0.173648, -4.2222e-08, 0, 0.2, -0.2)

[node name="LeftSprintRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, -8.9407e-08, -1.88775e-08, 0, 0, 1, 0, -1, 2.67405e-08, 0.155, 0.5, 1.2)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_0vcbw")

[node name="LeftStepTarget" type="Node3D" parent="StepTargetController/LeftSprintRayCast"]
transform = Transform3D(-0.0449434, 0.254887, -0.965926, 0.167731, -0.951251, -0.258819, -0.984808, -0.173648, -4.2222e-08, -1.49012e-08, 0, -0.5)

[node name="LeftRaiseTarget" type="Node3D" parent="StepTargetController/LeftSprintRayCast"]
transform = Transform3D(-0.0449434, 0.254887, -0.965926, 0.167731, -0.951251, -0.258819, -0.984808, -0.173648, -4.2222e-08, -4.47035e-08, 0.2, -0.2)

[node name="RightWalkRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, 0, 2.74655e-09, 1.86265e-08, -1.49012e-08, 1, 0, -1, -4.8434e-08, -0.155, 0.5, 0.4)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_6ur5u")

[node name="RightStepTarget" type="Node3D" parent="StepTargetController/RightWalkRayCast"]
transform = Transform3D(0.0449435, -0.254887, -0.965926, 0.167731, -0.951251, 0.258819, -0.984808, -0.173648, -4.2222e-08, 0, 2.98023e-08, -0.5)

[node name="RightRaiseTarget" type="Node3D" parent="StepTargetController/RightWalkRayCast"]

[node name="LeftWalkRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, -8.9407e-08, -1.88775e-08, 0, 0, 1, 0, -1, 2.67405e-08, 0.155, 0.5, 0.4)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_0vcbw")

[node name="LeftStepTarget" type="Node3D" parent="StepTargetController/LeftWalkRayCast"]
transform = Transform3D(-0.0449434, 0.254887, -0.965926, 0.167731, -0.951251, -0.258819, -0.984808, -0.173648, -4.2222e-08, -1.49012e-08, 0, -0.5)

[node name="LeftRaiseTarget" type="Node3D" parent="StepTargetController/LeftWalkRayCast"]

[node name="RightBackRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, 0, 2.74655e-09, 1.86265e-08, -1.49012e-08, 1, 0, -1, -4.8434e-08, -0.155, 0.5, -0.5)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_6ur5u")

[node name="RightStepTarget" type="Node3D" parent="StepTargetController/RightBackRayCast"]
transform = Transform3D(0.0449435, -0.254887, -0.965926, 0.167731, -0.951251, 0.258819, -0.984808, -0.173648, -4.2222e-08, 0, 2.98023e-08, -0.5)

[node name="RightRaiseTarget" type="Node3D" parent="StepTargetController/RightBackRayCast"]

[node name="LeftBackRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, -8.9407e-08, -1.88775e-08, 0, 0, 1, 0, -1, 2.67405e-08, 0.155, 0.5, -0.5)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_0vcbw")

[node name="LeftStepTarget" type="Node3D" parent="StepTargetController/LeftBackRayCast"]
transform = Transform3D(-0.0449434, 0.254887, -0.965926, 0.167731, -0.951251, -0.258819, -0.984808, -0.173648, -4.2222e-08, -1.49012e-08, 0, -0.5)

[node name="LeftRaiseTarget" type="Node3D" parent="StepTargetController/LeftBackRayCast"]

[node name="RightStandRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, 0, 2.74655e-09, 1.86265e-08, -1.49012e-08, 1, 0, -1, -4.8434e-08, -0.155, 0.5, 0)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_6ur5u")

[node name="RightStepTarget" type="Node3D" parent="StepTargetController/RightStandRayCast"]
transform = Transform3D(0.0449435, -0.254887, -0.965926, 0.167731, -0.951251, 0.258819, -0.984808, -0.173648, -4.2222e-08, 0, 2.98023e-08, -0.5)

[node name="RightRaiseTarget" type="Node3D" parent="StepTargetController/RightStandRayCast"]
transform = Transform3D(1, 0, 1.53885e-17, 0, 1, 0, -4.73652e-16, 0, 1, 0, 1.61702e-08, -0.33386)

[node name="LeftStandRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, -8.9407e-08, -1.88775e-08, 0, 0, 1, 0, -1, 2.67405e-08, 0.155, 0.5, 0)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_0vcbw")

[node name="LeftStepTarget" type="Node3D" parent="StepTargetController/LeftStandRayCast"]
transform = Transform3D(-0.0449434, 0.254887, -0.965926, 0.167731, -0.951251, -0.258819, -0.984808, -0.173648, -4.2222e-08, -1.49012e-08, 0, -0.5)

[node name="LeftRaiseTarget" type="Node3D" parent="StepTargetController/LeftStandRayCast"]
transform = Transform3D(1, 0, 6.00553e-16, 0, 1, 0, 0, 0, 1, -2.98023e-08, -8.92758e-09, -0.33386)

[node name="RightStrafeRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, 0, 2.74655e-09, 1.86265e-08, -1.49012e-08, 1, 0, -1, -4.8434e-08, -0.155, 0.5, 0.159584)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_6ur5u")

[node name="RightStepTarget" type="Node3D" parent="StepTargetController/RightStrafeRayCast"]
transform = Transform3D(0.0449435, -0.254887, -0.965926, 0.167731, -0.951251, 0.258819, -0.984808, -0.173648, -4.2222e-08, 0, 2.98023e-08, -0.5)

[node name="RightRaiseTarget" type="Node3D" parent="StepTargetController/RightStrafeRayCast"]
transform = Transform3D(1, 0, 1.53885e-17, 0, 1, 0, -4.73652e-16, 0, 1, 0, 1.61702e-08, -0.33386)

[node name="LeftStrafeRayCast" type="RayCast3D" parent="StepTargetController"]
transform = Transform3D(1, -8.9407e-08, -1.88775e-08, 0, 0, 1, 0, -1, 2.67405e-08, 0.155, 0.5, -0.129809)
target_position = Vector3(0, 0, -1)
script = SubResource("GDScript_0vcbw")

[node name="LeftStepTarget" type="Node3D" parent="StepTargetController/LeftStrafeRayCast"]
transform = Transform3D(-0.0449434, 0.254887, -0.965926, 0.167731, -0.951251, -0.258819, -0.984808, -0.173648, -4.2222e-08, -1.49012e-08, 0, -0.5)

[node name="LeftRaiseTarget" type="Node3D" parent="StepTargetController/LeftStrafeRayCast"]
transform = Transform3D(1, 0, 6.00553e-16, 0, 1, 0, 0, 0, 1, -2.98023e-08, -8.92758e-09, -0.33386)

[node name="RightJumpTarget" type="Node3D" parent="StepTargetController"]
transform = Transform3D(0.0449435, -0.254887, -0.965926, 0.167731, -0.951251, 0.258819, -0.984808, -0.173648, -4.2222e-08, -0.155, 0.38212, 0)

[node name="LeftJumpTarget" type="Node3D" parent="StepTargetController"]
transform = Transform3D(-0.0449434, 0.254887, -0.965926, 0.167731, -0.951251, -0.258819, -0.984808, -0.173648, -4.2222e-08, 0.155, 0.38212, 0)

[node name="InteractableDetection" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87943, 0)
collision_layer = 256
collision_mask = 256

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractableDetection"]
shape = SubResource("SphereShape3D_0jb3p")

[node name="SwapButtonTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="JumpGraceTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="InteractableDetection" to="." method="_on_interactable_detection_area_entered"]
[connection signal="area_exited" from="InteractableDetection" to="." method="_on_interactable_detection_area_exited"]
[connection signal="timeout" from="SwapButtonTimer" to="." method="_on_swap_button_timer_timeout"]
[connection signal="timeout" from="JumpGraceTimer" to="." method="_on_jump_grace_timer_timeout"]
